--- a/.github/workflows/angular-gh-pages.yaml
+++ b/.github/workflows/angular-gh-pages.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           node-version: 20 # Use a suitable Node.js version
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@18
+
       - name: Install dependencies
         run: npm install
 
