--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,14 +43,18 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} ng build --configuration production --output-path=dist
 
       - name: Create .nojekyll file
-        run: touch dist/.nojekyll
+        run: touch dist/AkshayV30/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist
+          folder: dist/AkshayV30
           clean: true
+
+      # - name: Copy index.html to 404.html
+      #   run: cp dist/my-app/index.html dist/my-app/404.html
+
 
   #     - name: Upload artifact
   #       uses: actions/upload-pages-artifact@v3
